Documented installation process on Windows. Minor template tweaks for Internet Explorer.

--- a/cybele/templates/base.html
+++ b/cybele/templates/base.html
@@ -18,8 +18,9 @@ padding: 1em 0 1em 2em;
 }
 
 .channel h1 {
-color: ghostwhite;
+color: gainsboro;
 float: right;
+font-family: "WenQuanYi Micro Hei Mono", "Bitstream Vera Sans Mono", Monaco, "Courier New", monospace;
 font-size: 5em;
 font-weight: normal;
 padding-right: 0.5em;
@@ -49,6 +50,8 @@ white-space: pre;
 
 .channel tt {
 color: darkslategray;
+font-family: "WenQuanYi Micro Hei Mono", "Bitstream Vera Sans Mono", Monaco, "Courier New", monospace;
+font-size: small;
 z-index: 2;
 }
 </style>
